<?xml version="1.0"?>
<package format="2">
  <name>car_maneuver_recovery</name>
  <version>0.0.0</version>
  <description>The car_maneuver_recovery package</description>

  <maintainer email="gkourosg@yahoo.gr">George Kouros</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/gKouros/car_maneuver_recovery</url>
  <url type="bugtracker">http://github.com/gKouros/car_maneuver_recovery/issues</url>
  <author email="gkourosg@yahoo.gr">George Kouros</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>base_local_planner</depend>

  <export>
    <nav_core plugin="${prefix}/car_maneuver_recovery_plugin.xml"/>
  </export>
</package>
